# Game-MATRIX-cub3D

./: CMakeLists.txt  MATRIX_cub3D  Makefile  README.md  cub3D  cub3d.c  debugtest.c  ft_drow.c  ft_error.c  ft_other_fun.c  ft_parser.c  ft_valid.c  main.c
NO_BONUS/: CMakeLists.txt  Makefile
NO_BONUS/draws/: ft_draw.c  ft_draw_cefl.c  ft_draw_hud.c
NO_BONUS/error_list/: ft_error.c
NO_BONUS/includes/: cub3d.h
NO_BONUS/maps/: light_map.cub
NO_BONUS/other/: ft_assignment_3.c  ft_screenshot.c
NO_BONUS/parser_and_valid/: ft_valid.c
NO_BONUS/pudge_hook/: ft_action.c  ft_hook.c  ft_key_and_mouse.c
NO_BONUS/sprite/: ft_sprite.c
NO_BONUS/xpm/: health_kit.xpm  oboi.xpm  oboi4.xpm  oboi7.xpm
cub3D_bonus/: Makefile  cub3d.c  main.c
cub3D_bonus/draws/: ft_draw.c  ft_draw_cefl.c  ft_draw_hud.c  ft_draw_map.c  ft_draw_sprite.c  ft_draw_stvol.c  ft_draw_tex.c  ft_draw_tex_2.c  ft_select_texture_for_draw.c
cub3D_bonus/error_list/: ft_error.c
cub3D_bonus/includes/: cub3d.h
cub3D_bonus/maps/: map.cub  map2.cub
cub3D_bonus/minilibx_mms_20200219/: libmlx.dylib  mlx.h
cub3D_bonus/other/: ft_assignment.c  ft_assignment_2.c  ft_assignment_3.c  ft_other_fun.c  ft_screenshot.c
cub3D_bonus/parser_and_valid/: ft_pars_no_so_we_ea_s.c  ft_pars_r_f_c.c  ft_parser.c  ft_valid.c
cub3D_bonus/pudge_hook/: ft_action.c  ft_hook.c  ft_key_and_mouse.c  ft_move.c
cub3D_bonus/rendering/: ft_rendering.c
cub3D_bonus/sprite/: ft_count_damage_sprite.c  ft_move_atack_sprite.c  ft_sprite.c
cub3D_bonus/texture/: ft_sprite_texture.c  ft_sprite_texture_2.c  ft_texture.c  (+2 more)
draws/: ft_draw.c  ft_draw_cefl.c  ft_draw_hud.c  ft_draw_map.c  ft_draw_sprite.c  ft_draw_sprite_2.c  ft_draw_stvol.c  ft_draw_tex.c  ft_draw_tex_2.c  ft_select_texture_for_draw.c
error_list/: ft_error.c
includes/: cub3d.h
libft/: Makefile  ft_atoi.c  get_next_line.c  libft.h
maps/: light_map.cub  map.cub  map2.cub  map3.cub
maps_no_b/: map2.cub  map3.cub  map_test.cub
other/: ft_assignment.c  ft_assignment_2.c  ft_assignment_3.c  ft_other_fun.c  ft_screenshot.c  ft_sprite.c
parser/: ft_pars_no_so_we_ea_s.c  ft_pars_r_f_c.c  ft_pars_r_s_f_c.c  ft_parser.c
parser_and_valid/: ft_pars_no_so_we_ea_s.c  ft_pars_r_f_c.c  ft_parser.c  ft_valid.c
pudge_hook/: ft_action.c  ft_hook.c  ft_key_and_mouse.c  ft_move.c
rendering/: ft_rendering.c
sprite/: ft_count_damage_sprite.c  ft_move_atack_sprite.c  ft_sprite.c
texture/: ft_sprite_texture.c  ft_sprite_texture_2.c  ft_texture.c  ft_texture_2.c  ft_weapon_texture.c
xpm/: AgentHodyba2.xpm  AgentStrelba.xpm  PUshkaNEW.xpm  SmithStoika.xpm  SmithStrelba.xpm  SmithStrelba2.xpm  apt.xpm  capcan.xpm  cubby.xpm  digl500.xpm  ggwp.xpm  mmmatrixxx.xpm  morpheus3.xpm  oboi5.xpm  pulka.xpm
xpm_no_b/: greenlight.xpm  logo.xpm  matrix.xpm  meshok.xpm  oboi2.xpm  oboi6.xpm  pillar.xpm
(+29 files in other folders)
